--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "rage-rpc",
   "version": "0.0.1",
   "description": "An asynchronous RPC implementation for RAGE Multiplayer",
-  "main": "index.js",
+  "main": "dist/rage-rpc.min.js",
   "scripts": {
+    "build": "webpack-cli --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,9 @@
     "url": "https://github.com/micaww/rage-rpc/issues"
   },
   "homepage": "https://github.com/micaww/rage-rpc#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^3.1.2",
+    "webpack": "^4.23.1"
+  }
 }
