--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.3",
   "description": "An asynchronous RPC implementation for RAGE Multiplayer",
   "main": "dist/rage-rpc.min.js",
+  "types": "dist/rage-rpc.d.ts",
   "scripts": {
     "build": "webpack-cli --config ./webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "type-check": "tsc"
   },
+  "files": ["dist"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/micaww/rage-rpc.git"
@@ -19,7 +21,12 @@
   "homepage": "https://github.com/micaww/rage-rpc#readme",
   "dependencies": {},
   "devDependencies": {
-    "webpack-cli": "^3.1.2",
-    "webpack": "^4.23.1"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-typescript": "^7.1.0",
+    "babel-loader": "^8.0.5",
+    "typescript": "^3.2.2",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
   }
 }
