--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rage-rpc",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "An asynchronous RPC implementation for RAGE Multiplayer",
   "main": "dist/rage-rpc.min.js",
   "types": "dist/rage-rpc.d.ts",
@@ -8,7 +8,9 @@
     "build": "webpack-cli --config ./webpack.config.js",
     "type-check": "tsc"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/micaww/rage-rpc.git"
