--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rage-rpc",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "An asynchronous RPC implementation for RAGE Multiplayer",
   "main": "dist/rage-rpc.min.js",
   "types": "dist/rage-rpc.d.ts",
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-typescript": "^7.1.0",
     "babel-loader": "^8.0.5",
+    "replace-in-file-webpack-plugin": "^1.0.6",
     "typescript": "^3.2.2",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
